[package]
name = "l10_edge_examples"
version = "0.0.8"
edition = "2021"
authors = ["Agustin Palafox", "Alex Aldana", "Alvaro Lopez", "Darian Harrison", "Mario Hernandez"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
panic-halt = "0.2.0"


rp-pico = "0.7"

usb-device= "0.2.9"
usbd-serial = "0.1.1"


fugit = "0.3.5"
heapless = "0.7.9"
nb = "1.0"



pio = "0.2.0"
pio-proc = "0.2.1"

defmt = "0.3.0"
defmt-rtt = "0.4.0"