[package]
name = "pico_l10_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
panic-halt = "0.2.0"

rp-pico = "0.7"

usb-device= "0.2.9"
usbd-serial = "0.1.1"

fugit = "0.3.5"
heapless = "0.7.9"